@@ -101,6 +101,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - FIX: Can't download files containing space or + in their names by HTTP (IVY-923)
 - FIX: Maven2 parser doesn't support POMs with <model> as root (IVY-932)
 - FIX: Default retrieve, publish and deliver patterns doesn't include the [classifier] token (IVY-935)
+- FIX: Can't use latest.release for pom dependencies (IVY-936)
 
    2.0.0-rc1
 =====================================
